--- a/index.html
+++ b/index.html
@@ -47,14 +47,8 @@
 	<img src="fotos/iphone.jpg" alt="">
 	<h4>Es funcional y Potente</h4>
 
-	<li class="estilo">iPad Mini</li>
-	<img id="mini" src="fotos/mini.jpg" alt="">
-	<h4>Es muy practica y muy bonita</h4>
    
-   <li>Apple Watch</li>
-   <img id="mi" src="fotos/mi.jpg">
-   <label>Series 8 Una evolucion muy saludable</label>
-   <h4>Es muy actualizado</h4>
+   
 </ul>
 <div class="container">
 	<div class="row">
@@ -65,6 +59,15 @@
 		  <div class="card-body">
 
 		    <p class="card-text">Es muy actualizado.</p>
+		  </div>
+
+		  <div class="card" style="width: 18rem;">
+      <h5 class="card-title">Ipad mini</h5>
+
+		  <img src="fotos/mini.jpg" class="card-img-top" alt="...">
+		  <div class="card-body">
+
+		    <p class="card-text">Es muy practica.</p>
 		  </div>
 		</div>  
 	</div>
